# pyfreshr

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
examples/: example_usage.py
src/pyfreshr/: __init__.py  client.py  const.py  exceptions.py  models.py
tests/: test_client.py
