[project]
name = "pyfreshr"
dynamic = ["version"]
description = "Async Python client for the Fresh-R / bw-log.com API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.8"]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Writes src/pyfreshr/_version.py so the version is accessible at runtime.
write_to = "src/pyfreshr/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

include = ["pyfreshr*"]
