[project]
name = "pyfreshr"
dynamic = ["version"]
description = "Async Python client for the Fresh-r / bw-log.com API."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Leon Grave"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
]
dependencies = ["aiohttp>=3.8"]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Writes src/pyfreshr/_version.py so the version is accessible at runtime.
write_to = "src/pyfreshr/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

include = ["pyfreshr*"]

[tool.setuptools.package-data]
pyfreshr = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["src/pyfreshr/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["pyfreshr"]
omit = ["*/pyfreshr/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75
