[project]
name = "pyfreshr"
dynamic = ["version"]
description = "Async Python client for the Fresh-r / bw-log.com API."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Leon Grave"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
]
dependencies = ["aiohttp>=3.8"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.22",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Writes src/pyfreshr/_version.py so the version is accessible at runtime.
write_to = "src/pyfreshr/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

include = ["pyfreshr*"]

[tool.setuptools.package-data]
pyfreshr = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["src/pyfreshr/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["pyfreshr"]
omit = ["*/pyfreshr/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["src/pyfreshr/_version\\.py"]
